# archeture

./: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  README.md
common/: .CMakeLists.txt.swp  CMakeLists.txt
common/cJSON/: .CMakeLists.txt.swp  .cJSON.c.swp  CMakeLists.txt
common/core/: .CMakeLists.txt.swp  .Makefile.swp  CMakeLists.txt  client.c  cmd.c  config_read.c  core_signal.c  err.c  err_manage.c  hash.c  heap.c  heap_timer.c  init.c  init_module.c  json.c  letter_hash.c  log.c  number_hash.c  thread.c  timer_list.c
common/net/: CMakeLists.txt  README.md  addr_inet.c  addr_manage.c  addr_unix.c  config.c  create.c  create_comm.c  create_log.c  epoll.c  global_log.c  handle.c  hash_hub.c  hub.c  json.c  layer4_packet.c  multi_proto_config.c  multi_proto_create.c  param_api.c  param_file.c  param_manage.c  recv.c  recv_check.c  rendezvous.c  result.c  send.c  socket.c  tcp.c  timer.c  transfer_proto.c  transfer_proto_comm.c  udp.c
example/: CMakeLists.txt
include/: cunit.h
include/core/: cmd.h  cmd_private.h  config_read.h  core_signal.h  err.h  err_manage.h  err_private.h  hash.h  heap.h  heap_timer.h  heap_timer_private.h  init.h  init_module.h  init_private.h  json.h  letter_hash.h  log.h  number_hash.h  print.h  std_comm.h  thread.h  timer_list.h  timer_list_private.h
include/mysql/: my_config.h  my_list.h  mysql_version.h
include/net/: addr_inet.h  addr_inet_private.h  addr_manage.h  addr_manage_private.h  addr_unix.h  addr_unix_private.h  comm.h  config.h  config_private.h  create.h  create_comm.h  create_log.h  epoll.h  (+33 more)
lib/: libmysqlclient.so.18.1.0
src/: CMakeLists.txt  README.md
tools/: CMakeLists.txt
(+20 files in other folders)
